nowrap in list + fixes combobox + remove ugly round cornors + move additional css -> combobox looks more like ISPConfig
git-svn-id: svn://svn.ispconfig.org/ispconfig3/trunk@3003 c1a6f2c7-8504-0410-933a-a4dae0184b0a

--- a/interface/web/themes/default/css/screen/content.css
+++ b/interface/web/themes/default/css/screen/content.css
@@ -175,8 +175,8 @@
 	table.full { width: 100%; }
 	table.fixed { table-layout:fixed }
 
-	table.list td{max-width: 350px;min-width: px;overflow:hidden;text-overflow: ellipsis; -o-text-overflow: ellipsis; -icab-text-overflow: ellipsis; -khtml-text-overflow: ellipsis; -moz-text-overflow: ellipsis; -webkit-text-overflow: ellipsis;}
-	th,td { padding: 0.5em;text-align:left; }
+	table.list td{max-width:350px;min-width: 32px;white-space: nowrap;overflow:hidden;text-overflow: ellipsis; -o-text-overflow: ellipsis; -icab-text-overflow: ellipsis; -khtml-text-overflow: ellipsis; -moz-text-overflow: ellipsis; -webkit-text-overflow: ellipsis;}
+	th,td { padding: 0.5em;text-align:left;}
 	thead th { background: #444 url(../../images/lists_thead_bg.png) repeat-x; color: #fff }
 	tbody th { background: #ccc; color: #333 }
 	tbody th.sub { background: #ddd; color: #333 }
